--- a/analyses/notebooks/population_data_validation.ipynb
+++ b/analyses/notebooks/population_data_validation.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Validation Analysis of the SSP3 and SPP5 Population Data\n",
     "\n",
-    "This notebook tests the population data that goes into GCAM-USA and TELL to confirm that they add to the same nationwide and state-level total populations for SSP3 and SSP5. The raw state-level data is taken directly from the Jiang et al. population dataset (https://zenodo.org/records/3956412) and aggregate using the functions below."
+    "This notebook tests the population data that goes into GCAM-USA and TELL to confirm that they add to the same nationwide and state-level total populations for SSP3 and SSP5. The raw state-level data is taken directly from the Jiang et al. population dataset (https://zenodo.org/records/3956412) and aggregated using the functions below."
    ]
   },
   {
@@ -169,9 +169,6 @@
     "    \n",
     "    # Convert the county FIPS code to a state FIPS code:\n",
     "    pop_df['State_FIPS'] = (((pop_df['FIPS']/1000).apply(np.floor))*1000).astype(int)\n",
-    "    \n",
-    "    # Write out the dataframe to a .csv file:\n",
-    "    pop_df.to_csv((data_input_dir + 'Test.csv'), sep=',', index=False)\n",
     "    \n",
     "    # Drop the county FIPS and state_name columns:\n",
     "    pop_df.drop(['FIPS', 'state_name'], axis=1, inplace=True)\n",
