--- a/analyses/notebooks/tell_runs_exp_group_b_new.ipynb
+++ b/analyses/notebooks/tell_runs_exp_group_b_new.ipynb
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "04afab9a",
    "metadata": {
     "pycharm": {
@@ -234,18 +234,40 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Start time =  2024-05-24 10:18:10.475224\n",
-      "End time =  2024-05-24 10:19:25.196201\n",
-      "Elapsed time =  0:01:14.721305\n"
+      "Scenario =  historic  , Year =  2007\n",
+      "Elapsed time =  0:01:08.574128\n",
+      "Scenario =  historic  , Year =  2008\n",
+      "Elapsed time =  0:01:08.709681\n",
+      "Scenario =  historic  , Year =  2009\n",
+      "Elapsed time =  0:01:08.322191\n",
+      "Scenario =  historic  , Year =  2010\n",
+      "Elapsed time =  0:01:11.559144\n",
+      "Scenario =  historic  , Year =  2011\n",
+      "Elapsed time =  0:01:11.349524\n",
+      "Scenario =  historic  , Year =  2012\n",
+      "Elapsed time =  0:01:11.145497\n",
+      "Scenario =  historic  , Year =  2013\n",
+      "Elapsed time =  0:01:10.215729\n",
+      "Scenario =  historic  , Year =  2014\n",
+      "Elapsed time =  0:01:08.018387\n",
+      "Scenario =  historic  , Year =  2015\n",
+      "Elapsed time =  0:01:09.152000\n",
+      "Scenario =  historic  , Year =  2016\n",
+      "Elapsed time =  0:01:09.537181\n",
+      "Scenario =  historic  , Year =  2017\n",
+      "Elapsed time =  0:01:08.902471\n",
+      "Scenario =  historic  , Year =  2018\n",
+      "Elapsed time =  0:01:09.155384\n",
+      "Scenario =  historic  , Year =  2019\n"
      ]
     }
    ],
    "source": [
     "# Run the TELL model forward in time:\n",
-    "for year in range(2020,2025,5):\n",
+    "for year in range(2007,2020,1):\n",
     "    summary_df, ba_time_series_df, state_time_series_df = tell.execute_forward(year_to_process = str(year),\n",
     "                                                                               gcam_target_year = str(year), \n",
-    "                                                                               scenario_to_process = 'rcp45cooler_ssp3',\n",
+    "                                                                               scenario_to_process = 'historic',\n",
     "                                                                               data_output_dir = '/Users/burl878/Documents/IMMM/Data/TELL/Production_Runs_V2/tell_data/outputs/tell_output',\n",
     "                                                                               gcam_usa_input_dir = '/Users/burl878/Documents/IMMM/Data/TELL/Production_Runs_V2/tell_data/gcamusa_data',\n",
     "                                                                               map_input_dir = '/Users/burl878/Documents/IMMM/Data/TELL/Production_Runs_V2/tell_data/ba_service_territory_data',\n",
@@ -257,17 +279,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "180fed5e-d89d-4815-b2c5-64f45d68095f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "53e89369-0f72-426f-aa9e-2e51fd4938af",
+   "id": "51e7df02-d9ed-4436-ae78-e0d4365b4fe2",
    "metadata": {},
    "outputs": [],
    "source": []
